# Nocturne

./: README.md
data/: com.jeffser.Nocturne.gschema.xml
po/: POTFILES.in
src/: actions.py  constants.py  main.py  meson.build  nocturne.gresource.xml  preferences.py  window.py
src/integrations/: base.py  discord_rpc.py  jellyfin.py  local.py  meson.build  navidrome.py
src/ui/: preferences.blp  window.blp
src/ui/song/: row.blp
src/widgets/: __init__.py
src/widgets/pages/: __init__.py  meson.build  songs_all.py  songs_starred.py
src/widgets/playing/: player.py
src/widgets/song/: __init__.py  details_dialog.py  meson.build  row.py
