moduledir = get_option('prefix') / get_option('datadir') / meson.project_name() / 'nocturne' / 'widgets' / 'pages'

widgets = [
  '__init__.py',
  'home.py',
  'login.py',
  'artists.py',
  'playlists.py',
  'songs_starred.py',
  'songs_all.py',
  'albums.py',
  'albums_all.py',
  'radios.py',
  'welcome.py',
  'setup.py',
]

install_data(widgets, install_dir: moduledir)